@@ -123,11 +123,11 @@
 /* RFC 5780 */
 #define STUN_ATTRIBUTE_PADDING (0x0026)
 #define STUN_ATTRIBUTE_RESPONSE_PORT (0x0027)
-#define STUN_ATTRIBUTE_RESPONSE_ORIGIN (0x802b)
-#define STUN_ATTRIBUTE_OTHER_ADDRESS (0x802c)
+#define STUN_ATTRIBUTE_RESPONSE_ORIGIN (0x802B)
+#define STUN_ATTRIBUTE_OTHER_ADDRESS (0x802C)
 
 /* RFC 6062 ==>> */
-#define STUN_ATTRIBUTE_CONNECTION_ID (0x002a)
+#define STUN_ATTRIBUTE_CONNECTION_ID (0x002A)
 /* <<== RFC 6062 */
 
 #define STUN_VALID_CHANNEL(chn) ((chn)>=0x4000 && (chn)<=0x7FFF)
